ZCS-1166 :- Universal UI - Task list, list view - right view
Desc :- Update the styles, css selectors to match the styles, spacing, typography, color
	for List header, headings, text, icons,task button for the task list view.

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -1982,14 +1982,57 @@ div.CompDragArea * {
 	padding:5px;
 }
 
-.newTaskBanner {
-	@InactiveCursor@
-	color:rgb(120, 111, 91);
-	padding:5px 0px;
+.ZmTaskMultiView .newTaskBanner .ImgAdd-svg {
+	@TaskListViewAddNewTaskIcon@
 }
 
-.newTaskBannerSep {
-	border-bottom:2px solid #AAA;
+.ZmTaskMultiView .DwtListView  .RowDouble {
+	@TaskReadingPaneRight-ListViewItem@
+}
+
+.ZmTaskMultiView .DwtListView .RowDouble td {
+	@TaskReadingPaneRight-ListViewItemCheckboxCell@
+}
+
+.ZmTaskMultiView .DwtListView  .RowDouble .TaskSubject {
+	@TaskReadingPaneRight-ListViewItemSubject@
+}
+
+.ZmTaskMultiView .DwtListView  .RowDouble .TaskDate {
+	@TaskReadingPaneRight-ListViewItemDate@
+}
+
+.ZmTaskMultiView .DwtListView .BottomRow {
+	@TaskReadingPaneRight-ListViewItemBottomRowContainer@
+}
+
+.ZmTaskMultiView .DwtListView .BottomRow .IconOuterWrapper {
+	@TaskReadingPaneRight-ListViewItemBottomIconOuterWrapper@
+}
+
+.ZmTaskMultiView .DwtListView .BottomRow .IconInnerWrapper {
+	@TaskReadingPaneRight-ListViewItemBottomIconInnerWrapper@
+}
+
+.ZmTaskMultiView .DwtListView .DwtListView-Rows .RowDouble > table > tbody > tr > td:first-of-type {
+	@TaskReadingPaneRight-ListViewItemCheckIconContainerCell@
+}
+
+.ZmTaskMultiView .DwtListView .DwtListView-Rows .RowDouble > table > tbody > tr > td:first-of-type > div:first-of-type {
+	@TaskReadingPaneRight-ListViewItemCheckIconContainer@
+}
+
+
+.ZmTaskMultiView .DwtListView  .RowDouble > table {
+	@FullHeight@
+}
+
+.ZmTaskMultiView .DwtListView  .RowDouble .TopRow  {
+	@TaskReadingPaneRight-ListViewItemTopRowContainer@
+}
+
+.ZmTaskMultiView .newTaskBannerSep td {
+	padding-left:0px;
 }
 
 .ZmEditContactViewOtherCalendar {
@@ -2220,10 +2263,6 @@ div.CompDragArea * {
 .ZmCompletedtask TD {
 	text-decoration:line-through;
 	color:#999;
-}
-
-.ZmOverduetask TD {
-	color:red;
 }
 
 .ZmOverdueCompletedtask TD {
